--- a/comments-dev.yml
+++ b/comments-dev.yml
@@ -18,9 +18,9 @@ spring:
       minimum-idle: 10
   rabbitmq:
     virtual-host: /leyou
-    username: /leyou
-    password: leyou
-    host: 192.168.19.121
+    username: zgq
+    password: zgqone
+    host: 192.168.58.128
   redis:
     host: 192.168.19.121
   jackson:
