--- a/goodsweb-dev.yml
+++ b/goodsweb-dev.yml
@@ -6,12 +6,12 @@ spring:
   thymeleaf:
     cache: false
   rabbitmq:
-    host: 192.168.19.121
-    username: /leyou
-    password: leyou
+    username: zgq
+    password: zgqone
+    host: 192.168.58.128
     virtual-host: /leyou
   redis:
-    host: 192.168.19.121
+    host: 127.0.0.1
 eureka:
   client:
     service-url:
