--- a/item-dev.yml
+++ b/item-dev.yml
@@ -11,11 +11,11 @@ spring:
       maximum-pool-size: 20
       minimum-idle: 10
   redis:
-    host: 192.168.19.121
+    host: 127.0.0.1
   rabbitmq:
-    host: 192.168.19.121
-    username: /leyou
-    password: leyou
+    username: zgq
+    password: zgqone
+    host: 192.168.58.128
     virtual-host: /leyou
     template:
       retry:
