--- a/registry-dev.yml
+++ b/registry-dev.yml
@@ -5,9 +5,9 @@ spring:
     name: ly-registry
   rabbitmq:
     virtual-host: /leyou
-    username: /leyou
-    password: leyou
-    host: 192.168.19.121
+    username: zgq
+    password: zgqone
+    host: 192.168.58.128
 eureka:
   client:
     fetch-registry: false
