--- a/sms-dev.yml
+++ b/sms-dev.yml
@@ -4,10 +4,10 @@ spring:
   application:
     name: sms-service
   rabbitmq:
+    username: zgq
+    password: zgqone
+    host: 192.168.58.128
     virtual-host: /leyou
-    username: /leyou
-    password: leyou
-    host: 192.168.19.121
 
 leyou:
   sms:
