--- a/upload-dev.yml
+++ b/upload-dev.yml
@@ -4,10 +4,10 @@ spring:
   application:
     name: upload-service
   rabbitmq:
+    username: zgq
+    password: zgqone
+    host: 192.168.58.128
     virtual-host: /leyou
-    username: /leyou
-    password: leyou
-    host: 192.168.19.121
   servlet:
     multipart:
       max-file-size: 10MB # 限制文件上传的大小
