--- a/user-dev.yml
+++ b/user-dev.yml
@@ -6,16 +6,16 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/leyou?characterEncoding=UTF-8&useSSL=false
     username: root
-    password: 123456
+    password: 
     hikari:
       maximum-pool-size: 20
       minimum-idle: 10
   redis:
-    host: 192.168.19.121
+    host: 127.0.0.1
   rabbitmq:
-    host: 192.168.19.121
-    username: /leyou
-    password: leyou
+    username: zgq
+    password: zgqone
+    host: 192.168.58.128
     virtual-host: /leyou
     template:
       retry:
