--- a/auth-dev.yml
+++ b/auth-dev.yml
@@ -21,9 +21,9 @@ eureka:
     lease-renewal-interval-in-seconds: 5 #每隔5秒发一次心跳
 leyou:
   jwt:
-    secret: leyou@Login(Auth}*^31)&heiMa% # 登录校验的密钥
-    pubKeyPath: G:\\tmp\\rsa\\rsa.pub # 公钥地址
-    priKeyPath: G:\\tmp\\rsa\\rsa.pri # 私钥地址
+    secret: zgq@Login(Auth){}*^28)&orgvi% # 登录校验的密钥
+    pubKeyPath: D:\IdeaProjects\rsa\rsa.pub # 公钥地址
+    priKeyPath: D:\IdeaProjects\rsa\rsa.pri # 私钥地址
     expire: 30 # 过期时间,单位分钟
     cookieName: LY_TOKEN
     cookieMaxAge: 30
